--- a/ReignOfBazul/ReignOfBazul.vcxproj
+++ b/ReignOfBazul/ReignOfBazul.vcxproj
@@ -72,6 +72,10 @@
     <IncludePath>C:\Users\Alex\Documents\Visual Studio 2015\Projects\ReignOfBazul\ReignOfBazul\Include\SOIL;C:\Users\Alex\Documents\Visual Studio 2015\Projects\ReignOfBazul\ReignOfBazul\Include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\Alex\Documents\Visual Studio 2015\Projects\ReignOfBazul\ReignOfBazul\Libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>C:\Users\Alex\Documents\Visual Studio 2015\Projects\ReignOfBazul\ReignOfBazul\Include\SOIL;C:\Users\Alex\Documents\Visual Studio 2015\Projects\ReignOfBazul\ReignOfBazul\Include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Alex\Documents\Visual Studio 2015\Projects\ReignOfBazul\ReignOfBazul\Libs;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -88,6 +92,9 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;glew32s.lib;SOIL.lib;irrKlang.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
